# TruShell

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  SECURITY.md  clock.txt  idea.md  main.py  package.json  pyfunny.py  pyproject.toml  settings.py  todocli.py  todos.db
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-ci.yml
atoffice_shell/: __init__.py  cli.py  database.py  model.py  project.py  pyfunny.py  settings.py  todocli.py
atoffice_shell/chronoterm/: __init__.py  clock_ascii.py  shell.py  sound.py  state.py  timezones.py
chronoterm/: __main__.py  alarms.py  clock_ascii.py  project.py  shell.py  sound.py  state.py  stopwatch.py  timezones.py
src/: job_control.rs  main.rs  parser.rs  terminal.rs
tests/: conftest.py  terminal_emulator.rs  test_cli.py  test_cli_argv.py  test_cli_cd.py  test_data.py  test_help_docs.py  test_nav.py  test_settings.py  test_sound.py  test_state_path.py  test_tasks.py  test_trukernel.py
trushell/: cli.py  project.py  pyfunny.py  state.py
trushell/chronoterm/: sound.py
trushell/commands/: data.py  tasks.py
trushell/config/: builtin_commands.md  plugins.md
trushell/core/: database.py  plugin_manager.py  trukernel.py
